added option to stop glue job
