# cdk/OpenAPI_Swagger_Definition.yaml
@@ -85,6 +85,30 @@ paths:
         httpMethod: POST
         type: aws_proxy
 
+  /admin/ingestion/stop:
+    <<: *commonOptions
+    post:
+      tags: [Admin]
+      summary: Stop the currently running ingestion Glue job
+      operationId: stop_ingestion
+      security:
+        - adminAuthorizer: []
+      responses:
+        "200":
+          description: Stop requested
+        "401":
+          description: Unauthorized
+        "409":
+          description: No running job to stop
+        "500":
+          description: Internal Server Error
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${adminFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: POST
+        type: aws_proxy
+
   /admin/ingestion/runs:
     <<: *commonOptions
     get:
